--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -32,10 +32,11 @@
                         API gateway, and distributed tracing capabilities.
                     </p>
                     <div class="project-tech">
-                        <span class="tech-tag">Spring Cloud</span>
+                        <span class="tech-tag">Java</span>
+                        <span class="tech-tag">Spring Boot</span>
+                        <span class="tech-tag">AWS</span>
                         <span class="tech-tag">Docker</span>
-                        <span class="tech-tag">Kubernetes</span>
-                        <span class="tech-tag">MongoDB</span>
+                        <span class="tech-tag">PostgreSQL</span>
                     </div>
                 </div>
 
@@ -55,10 +56,13 @@
                         and secure checkout process.
                     </p>
                     <div class="project-tech">
-                        <span class="tech-tag">Java</span>
-                        <span class="tech-tag">Spring Boot</span>
+                        <span class="tech-tag">React.js</span>
+                        <span class="tech-tag">Node.js</span>
                         <span class="tech-tag">REST API</span>
-                        <span class="tech-tag">MySQL</span>
+                        <span class="tech-tag">MongoDB</span>
+                        <span class="tech-tag">Express.js</span>
+                        <span class="tech-tag">Mongoose</span>
+                        <span class="tech-tag">JWT</span>
                     </div>
                 </div>
 
